2010-09-22  Ryan Lortie  <desrt@desrt.ca>

	* include/winbase.h (TzSpecificLocalTimeToSystemTime): Define.

2010-12-27  Markus Koenig  <basilo@users.sourceforge.net>

	* include/gdiplus/gdipluspixelformats.h (PixelFormatIndexed,
	PixelFormatGDI, PixelFormatAlpha, PixelFormatPAlpha,
	PixelFormatExtended, PixelFormatCanonical, PixelFormatUndefined,
	PixelFormatDontCare, PixelFormat1bppIndexed, PixelFormat4bppIndexed,
	PixelFormat8bppIndexed, PixelFormat16bppGrayScale,
	PixelFormat16bppRGB555, PixelFormat16bppRGB565, PixelFormat16bpp1555,
	PixelFormat24bppRGB, PixelFormat32bppRGB, PixelFormat32bppARGB,
	PixelFormat32bppPARGB, PixelFormat48bppRGB, PixelFormat64bppARGB,
	PixelFormat64bppPARGB, PixelFormatMax): Fix definition.

2010-10-20  Seth Jackson  <sethj@users.sourceforge.net>

	* include/commctrl.h (TC_ITEMHEADER[AW]): Rename to TCITEMHEADER[AW].
	Add defines for backward compatibility.

2010-12-27  Johann Hanne  <jonnyh33@users.sourceforge.net>

	* include/oaidl.h (GetTypeComp, GetTypeComp, IsMatchingType): Fix defintion.
	* include/objidl.h (AddConnection, ReleaseConnection): Ditto.
	* include/winbase.h (EnumResourceLanguagesA, EnumResourceLanguagesW,
	EnumResourceNamesA, EnumResourceNamesW, EnumResourceTypesA,
	EnumResourceTypesW): Ditto.
	* include/winnt.h (_SYSTEM_POWER_CAPABILITIES): Ditto.

2010-12-27  Seth Jackson  <sethj@users.sourceforge.net>

	* include/basetsd.h: (INT8, UINT8, INT16, UINT16): Define.

2010-12-27  Paul Sokolovsky  <pfalcon@users.sf.net>

	* include/bdatypes.h: Add missing semicolons.

2010-08-26  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* include/w32api.h: Increment version to 3.15.
	* Makefile.in: Ditto.

2010-08-26  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* Makefile.in: Update naming convention and compression format (lzma),
	leaving existing naming convention and compression format as is for Cygwin.

2010-08-25  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>
